# Fungi-Traductor

./: .gitignore  Fungi_Traductor.py  LICENSE  README.md  app.py  build_exe.bat  build_exe.sh  controller.py  mypy_output.txt  pyproject.toml  requirements.txt  view.py
fungi_traductor/: __main__.py
fungi_traductor/controller/: app_controller.py
fungi_traductor/model/: hints.py  translator.py
fungi_traductor/view/: gui.py
