[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungi-traductor"
version = "2.0.0"
description = "Traductor offline con interfaz gráfica"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "argostranslate>=1.9.0",
    "langdetect>=1.0.9",
    "pyttsx3>=2.90",
]

[project.scripts]
fungi-traductor = "fungi_traductor.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fungi_traductor*"]

[tool.setuptools.package-data]
"fungi_traductor" = ["assets/*.png", "assets/*.ico"]