[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fungi-traductor"
version = "2.0.0"
description = "Traductor offline con interfaz gráfica"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "argostranslate>=1.9.0",
    "langdetect>=1.0.9",
    "pyttsx3>=2.90",
]

[project.optional-dependencies]
docs = [
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "odfpy>=1.4.1",
    "fpdf2>=2.7.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
all = [
    "fungi-traductor[docs,ocr]",
    "platformdirs>=4.0.0",
]

[project.scripts]
fungi-traductor = "fungi_traductor.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fungi_traductor*"]

[tool.setuptools.package-data]
"fungi_traductor" = ["assets/*.png", "assets/*.ico"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "argostranslate",
    "argostranslate.package",
    "argostranslate.translate",
    "langdetect",
    "pyttsx3",
    "pyttsx3.drivers",
    "fitz",
    "odf",
    "odf.opendocument",
    "odf.text",
    "pytesseract",
]
ignore_missing_imports = true